[package]
name = "adam"
version = "0.1.0"
authors = ["f5xs"]
edition = "2018"

[features]
default = ["FLOAT32", "gitversion"]
FLOAT32 = []
gitversion = []

[dependencies]
itertools = "0.9"
git-version = "0.3"
rand = "0.7"
rand_distr = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
